--- a/学生管理系统/my-server/studentAccount.html
+++ b/学生管理系统/my-server/studentAccount.html
@@ -37,6 +37,9 @@
             </div>
         </div>
         <div id="forget_password" class="forgetpassword hidden">
+            <div class="forget_top">
+                <img src="https://miandianyaowang.oss-cn-beijing.aliyuncs.com/image-20240304193012630.png" id="quit">
+            </div>
             <div class="modal_content">
                 新密码：
                 <input type="password" id="forgetUserpassword">
