--- a/学生管理系统/my-server/index.html
+++ b/学生管理系统/my-server/index.html
@@ -28,7 +28,7 @@
                         <button class="change_stu" onclick="replaceBox()" ></button>
                     </div>
                     <div id="admin" class="admin_box hidden" >
-                        <img src="https://miandianyaowang.oss-cn-beijing.aliyuncs.com/image-20240302164023635.png" alt="image-20240302164023635" style="zoom:43%;" class="image_admin">
+                        <img src="https://miandianyaowang.oss-cn-beijing.aliyuncs.com/image-20240302164023635.png" alt="image-20240302164023635" style="zoom:43%;" id="image_admin">
                         <button class="change_admin"  onclick="replaceStu()"></button>
                     </div>       
                 </div>
