--- a/学生管理系统/my-server/studentAccount.html
+++ b/学生管理系统/my-server/studentAccount.html
@@ -53,5 +53,6 @@
     </div>
            
 </body>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="../js/studentAccount.js"></script>
 </html>
