--- a/学生管理系统/my-server/增删学生信息.html
+++ b/学生管理系统/my-server/增删学生信息.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../css/功能界面-重置密码.css">
-    <title>重置密码</title>
+    <link rel="stylesheet" type="text/css" href="../css/增删学生信息.css">
+    <title>学生管理系统管理员界面</title>
 </head>
+
 <body>
     <!--管理员页面-修改密码-->
     <div class="all">
@@ -33,17 +35,17 @@
                         <button id="button">退出登录</button>
                     </div>
                 </div>
-        
+
                 <div class="second">
                     <div class="box_1">
                         <div class="word">
-                            <button id="changeStudent">增删学生信息</button>
+                            <button id="addStudent">增删学生信息</button>
                             <hr />
-                            <button id="changeStudent">重置学生密码</button>
+                            <button id="resetStudent">重置学生密码</button>
                             <hr />
-                            <button id="changeStudent">研学安排</button>
+                            <button id="studyArrange">研学安排</button>
                             <hr />
-                            <button id="changeStudent">发布通告</button>
+                            <button id="publishAnnouncement">发布通告</button>
                             <div class="pic">
                                 <img src="https://yeruyu.oss-cn-beijing.aliyuncs.com/image-20240226194136372yun.png" />
                             </div>
@@ -51,25 +53,33 @@
                     </div>
                     <div class="box_2">
                         <div class="change">
-                            重置学生密码
+                            增删学生信息
                         </div>
                         <div class="input">
                             <span>姓名：</span>
                             <input type="text" value="" style="border-radius: 10px;" class="name"><br />
-                            <span>期数：</span>
+                            <span>学号：</span>
                             <input type="text" value="" style="border-radius: 10px;" class="num"><br />
+                            <span>电话：</span>
+                            <input type="text" value="" style="border-radius: 10px;" class="tel"><br />
+                            <span>专业：</span>
+                            <input type="text" value="" style="border-radius: 10px;"class="major"><br />
+                            <span>班级：</span>
+                            <input type="text" value="" style="border-radius: 10px;" class="class"><br />
+                            <span>期数：</span>
+                            <input type="text" value="" style="border-radius: 10px;" class="accountNumber"><br />
                             <span>方向：</span>
-                            <input type="text" value="" style="border-radius: 10px;" class="direction"><br />
-                            <span>账号：</span>
-                            <input type="password" value="" style="border-radius: 10px;" class="accountNumber"><br /><br />
+                            <input type="text" value="" style="border-radius: 10px;" class="direction"><br /><br />
                             <button
-                                style="background-color: rgb(123, 142, 216); font-size: 14px; color: white;border: none;" class="reset">确认修改</button>
+                                style="background-color: rgb(123, 142, 216); font-size: 14px; color: white;border: none;"
+                                class="reset">确认修改</button>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <script src="./index.js"></script>
+    <script src="./functionPage_resetPassword.js"></script>
 </body>
+
 </html>
