--- a/学生管理系统/my-server/学生功能界面.html
+++ b/学生管理系统/my-server/学生功能界面.html
@@ -40,13 +40,13 @@
                 <div class="info" id="info">
                     <div class="basic">
                         <ul>
-                            <li>姓名 ：<span class="basicInformation"></span></li>
-                            <li>期数 ：<span class="basicInformation"></span></li>
-                            <li>方向 ：<span class="basicInformation"></span></li>
-                            <li>学号 ：<span class="basicInformation"></span></li>
-                            <li>电话 ：<span class="basicInformation"></span></li>
-                            <li>专业 ：<span class="basicInformation"></span></li>
-                            <li>班级 ：<span class="basicInformation"></span></li>
+                            <li>姓名 ：<span class="basicInformation NAME"></span></li>
+                            <li>期数 ：<span class="basicInformation number"></span></li>
+                            <li>方向 ：<span class="basicInformation kind"></span></li>
+                            <li>学号 ：<span class="basicInformation studentNumber"></span></li>
+                            <li>电话 ：<span class="basicInformation phone"></span></li>
+                            <li>专业 ：<span class="basicInformation profession"></span></li>
+                            <li>班级 ：<span class="basicInformation class"></span></li>
                         </ul>
                         <div class="honor">
                             <span class="text">获奖记录 ：</span>
@@ -322,6 +322,7 @@
         </div>
     </div>
     <!--好臭的代码-->
+    <!--不要看辣，写的太烂辣，接口对不上啊QAQ-->
     <!-- 
            　  　▃▆█▇▄▖
     　 　 　 ▟◤▖　　　◥█▎
@@ -336,5 +337,7 @@
     -->
 </body>
 <script src="../js/jquery-3.7.1.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="../js/页面切换效果.js"></script>
+<script src="../js/学生功能界面.js"></script>
 </html>
